objects/com_smartsheet__Smartsheet_Data_Load__c.object
<CustomObject>
    <fields>
        <fullName>com_smartsheet__Sync__c</fullName>
        <label>Sync</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>false</fullName>
                    <default>true</default>
                    <label>false</label>
                </value>
                <value>
                    <fullName>true</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>com_smartsheet__apexJobId__c</fullName>
        <description>The id that matches up to the AsyncApexJob object</description>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__sheetId__c</fullName>
        <label>sheetId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__sobjectName__c</fullName>
        <label>sobjectName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__type__c</fullName>
        <label>type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>export</fullName>
                </value>
                <value>
                    <fullName>import</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Smartsheet Data Load</label>
    <nameField>
        <label>Smartsheet Data Load Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Smartsheet Data Load</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>